# PYTHON_2610_M1_LESSONS

./: README.md  pyproject.toml  random.html
all_examples/: example1_1.py  example1_2.py  example1_3.py  example1_4.py  example2_2.py  example3.py  example4.py  example4_1.py  example4_2.py  example4_3.py  example4_4.py  example4_5.py  example4_6.py  example8.py  example_deep_3.py
lesson1/example2/: pyproject.toml
lesson10/example/: decorators.py  example.py  example2.py  example3.py  example4.py
lesson10/example2/: example.py  example1.py  template.txt
lesson11/exampple/: example.py  example2.py  example3.py  example4.py  example5.py
lesson12/example/: chain.py  classes.py  random_list.py  (+2 more)
lesson13/: abstract.py  duck_tuping.py  getter_setter.py  meta.py  mro.py  polimorfizm.py  proxy_super.py
lesson14/: abstract_factory.py  dip.py  isp.py  journal.txt  lsp.py  ocp.py  ocp_2.py  srp.py
lesson15/: obj_by_obj.py
lesson16/: _dataclasses.py  _pathlib.py  example.py
lesson17/: calculate_result.xlsx  excel_program.py  result_excel.csv  test.csv  test.txt  test.xlsx  test_2.csv  test_3.csv  test_4.csv  test_excel.xlsx  work_with_csv.py  work_with_file.py  work_with_openpyxl.py  write_openpyxl.py
lesson18/: computers_page_2.html  computers_page_2.json  deserialize_json.py  pydantic_serializer.py  send_requests.py  serialize_json.py  user.json  youtube.html
lesson19/: beautifulsoup.py
lesson20/: create_database.py  db_manager.py  models.py  orm_engine.py
lesson26/: index.html  style.css
lesson27/: index.html  style.css
package_test/: __init__.py
(+92 files in other folders)
